Small updates to styles.  Need content from Prof Kenney.

--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@
         <!-- Header Elements -->
         <h1> Jeffrey Kenny </h1>
         <h2> Professor of Astronomy </h2>
-        <h2> Yale Univesity </h2>
+        <h2> Yale University </h2>
 
         <!-- Navigation -->
         <nav id="nav-bar">
