Commit before debug

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,9 +29,8 @@
         <!-- Navigation -->
         <nav id="nav-bar">
             <a href="#about"> About </a>
-            <a href="index.html"> Research </a>
+            <a href="projects.html"> Research </a>
             <a href="index.html"> Publications </a>
-            <a href=""> CV </a>
             <a href=""> Teaching </a>
             <a href="#contact"> Contact </a>
         </nav>
@@ -47,9 +46,11 @@
     <footer>
 
         <!-- Contact Info -->
-        <h3 id ="contact"> Contact Information </h3>
+        <h3 id="contact"> Contact Information </h3>
         <div class="contact-box">
-            <h4> <em> For Mail: </em> </h4>
+            <h4>
+                <em> For Mail: </em>
+            </h4>
             <p>Jeff Kenney</p>
             <p>Department of Astronomy</p>
             <p>Yale University</p>
@@ -57,16 +58,20 @@
             <p>New Haven, CT 06520-8101</p>
         </div>
         <div class="contact-box">
-            <h4> <em> Phone, Fax, Office: </em> </h4>
+            <h4>
+                <em> Phone, Fax, Office: </em>
+            </h4>
             <p>(203)-432-3013 (Office)</p>
             <p>(203-432-5048 (Fax)</p>
             <p>(203)-432-3000 (Astronomy Deparment Office)</p>
         </div>
         <div class="contact-box">
-            <h4> <em> Email: </em> </h4>
+            <h4>
+                <em> Email: </em>
+            </h4>
             <p>jeff.kenney@yale.edu</p>
         </div>
-        
+
 
     </footer>
 
