--- a/pages/projects.html
+++ b/pages/projects.html
@@ -44,8 +44,8 @@
             </div>
             <!-- Wide column for images -->
             <div class="col-wide" id="m86">
-                <img class="bottom" scr="../images/mary1.jpg" width="200px" height="200px">
-                <img class="top" scr="" width="400px" height="400px">
+                <img class="bottom" scr="../images/m86_2.png" width="200px" height="200px">
+                <img class="top" scr="../images/m86_2.png" width="400px" height="400px">
             </div>
         </section>
 
