worked on image grid and nav bar.

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,6 +28,7 @@
 
         <!-- Navigation -->
         <nav id="nav-bar">
+            <a href="index.html"> Home </a>
             <a href="#about"> About </a>
             <a href="projects.html"> Research </a>
             <a href="index.html"> Publications </a>
