Started styling. Added zoom boxes.

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,6 @@
 <body>
 
     <header>
-
         <!-- Header Elements -->
         <h1> Jeffrey Kenny </h1>
         <h2> Professor of Astronomy </h2>
@@ -48,31 +47,32 @@
 
         <!-- Contact Info -->
         <h3 id="contact"> Contact Information </h3>
-        <div class="contact-box">
-            <h4>
-                <em> For Mail: </em>
-            </h4>
-            <p>Jeff Kenney</p>
-            <p>Department of Astronomy</p>
-            <p>Yale University</p>
-            <p>PO BOX 208101</p>
-            <p>New Haven, CT 06520-8101</p>
-        </div>
-        <div class="contact-box">
-            <h4>
-                <em> Phone, Fax, Office: </em>
-            </h4>
-            <p>(203)-432-3013 (Office)</p>
-            <p>(203-432-5048 (Fax)</p>
-            <p>(203)-432-3000 (Astronomy Deparment Office)</p>
-        </div>
-        <div class="contact-box">
-            <h4>
-                <em> Email: </em>
-            </h4>
-            <p>jeff.kenney@yale.edu</p>
-        </div>
-
+        <section class="grid-container">
+            <div class="grid-item-txt">
+                <h4>
+                    <em> For Mail: </em>
+                </h4>
+                <p>Jeff Kenney</p>
+                <p>Department of Astronomy</p>
+                <p>Yale University</p>
+                <p>PO BOX 208101</p>
+                <p>New Haven, CT 06520-8101</p>
+            </div>
+            <div class="grid-item-txt">
+                <h4>
+                    <em> Phone, Fax, Office: </em>
+                </h4>
+                <p>(203)-432-3013 (Office)</p>
+                <p>(203-432-5048 (Fax)</p>
+                <p>(203)-432-3000 (Astronomy Deparment Office)</p>
+            </div>
+            <div class="grid-item-txt">
+                <h4>
+                    <em> Email: </em>
+                </h4>
+                <p>jeff.kenney@yale.edu</p>
+            </div>
+        </section>
 
     </footer>
 
