--- a/pages/projects.html
+++ b/pages/projects.html
@@ -70,26 +70,42 @@
 				<div class="grid-container">
 					<!-- Item in grid (an image in a container) -->
 					<div class="grid-item-img">
-						<img class="zoom" src="../images/ngc4921_colombari_rotated.jpg" onclick="openModal();currentSlide(1)" alt="NGC 4291 HST">
+						<img class="zoom" src="../images/ngc4921_colombari_rotated.jpg" onclick="openModal();currentImg(1)" alt="NGC 4291 HST">
 					</div>
 					<div class="grid-item-img">
-						<img class="zoom" src="../images/ngc4921-color-hi-medium.jpg" onclick="openModal();currentSlide(2)" alt="NGC 4291 HI labeled">
+						<img class="zoom" src="../images/ngc4921-color-hi-medium.jpg" onclick="openModal();currentImg(2)" alt="NGC 4291 HI labeled">
 					</div>
 					<div class="grid-item-img">
-						<img class="zoom" src="../images/ngc4921-fig2.jpg" onclick="openModal();currentSlide(3)" alt="NGC 4291 dust front">
+						<img class="zoom" src="../images/ngc4921-fig2.jpg" onclick="openModal();currentImg(3)" alt="NGC 4291 dust front">
 					</div>
 					<div class="grid-item-img">
-						<img class="zoom" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" onclick="openModal();currentSlide(4)" alt="NGC 4291 zoom sections">
+						<img class="zoom" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" onclick="openModal();currentImg(4)" alt="NGC 4291 zoom sections">
 					</div>
 					<div class="grid-item-img">
-						<img class="zoom" src="../images/ngc4921-fig3.jpg" onclick="openModal();currentSlide(5)" alt="NGC 4291 dust front">
+						<img class="zoom" src="../images/ngc4921-fig3.jpg" onclick="openModal();currentImg(5)" alt="NGC 4291 dust front">
 					</div>
 					<div class="grid-item-img">
-						<img class="zoom" src="../images/ngc4921-fig4.jpg" onclick="openModal();currentSlide(6)" alt="NGC 4291 dust front">
+						<img class="zoom" src="../images/ngc4921-fig4.jpg" onclick="openModal();currentImg(6)" alt="NGC 4291 dust front">
 					</div>
 				</div>
 			</div>
+			<!-- Popup (modal) image on click -->
+			<div id="modal">
+				<!-- Close button -->
+				<span class="close" onclick="closeModal()">&times;</span>
+				<!-- Modal left / right navigation -->
+				<span class="prev" onclick="changeImg(-1)">&#10094;</span>
+				<span class="next" onclick="changeImg(1)">&#10095;</span>
+				<!-- Modal Images -->
+				<img class="modal-content" src="../images/ngc4921_colombari_rotated.jpg" alt="NGC 4291 HST">
+				<img class="modal-content" src="../images/ngc4921-color-hi-medium.jpg" alt="NGC 4291 HI labeled">
+				<img class="modal-content" src="../images/ngc4921-fig2.jpg" alt="NGC 4291 dust front">
+				<img class="modal-content" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" alt="NGC 4291 zoom sections">
+				<img class="modal-content" src="../images/ngc4921-fig3.jpg" alt="NGC 4291 dust front">
+				<img class="modal-content" src="../images/ngc4921-fig4.jpg" alt="NGC 4291 dust front">
+			</div>
 		</section>
+		
 
 	</main>
 
