Started on publications list with most recent searches.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -25,9 +25,9 @@
 		<!-- Navigation  -->
 		<nav id="nav-bar" class="borders-in">
 			<a href="index.html"> Home </a>
-			<a href="#about"> About </a>
+			<a href="index.html#about"> About </a>
 			<a href="projects.html"> Research </a>
-			<a href="index.html"> Publications </a>
+			<a href="publications.html"> Publications </a>
 			<a href=""> Teaching </a>
 			<a href="#contact"> Contact </a>
 		</nav>
