--- a/pages/index.html
+++ b/pages/index.html
@@ -30,7 +30,7 @@
             <a href="index.html"> Home </a>
             <a href="#about"> About </a>
             <a href="projects.html"> Research </a>
-            <a href="index.html"> Publications </a>
+            <a href="publications.html"> Publications </a>
             <a href=""> Teaching </a>
             <a href="#contact"> Contact </a>
         </nav>
