Added svg header.

--- a/pages/index.html
+++ b/pages/index.html
@@ -21,9 +21,11 @@
 
     <header>
         <!-- Header Elements -->
-        <h1> Jeffrey Kenny </h1>
-        <h2> Professor of Astronomy </h2>
-        <h2> Yale University </h2>
+        <div class="head-container">
+            <h1> Jeffrey Kenny </h1>
+            <h2> Professor of Astronomy </h2>
+            <h2> Yale University </h2>
+        </div>
 
         <!-- Navigation -->
         <nav id="nav-bar">
