Added about blurb.

--- a/pages/index.html
+++ b/pages/index.html
@@ -42,6 +42,16 @@
     <main role="main">
 
         <!-- About -->
+        <section id="about">
+            <h2>About Jeffrey Kenney</h2>
+            <p>
+                I am an observational astronomer who investigates the structure and evolution of galaxies. I am interested in the things
+                that promote and stop star formation so I study the interstellar medium, particularly molecular gas.
+                A major focus of my work has been the environmental effects on galaxies in clusters, especially ram pressure stripping.
+                I like nearby galaxies that can be studied with good resolution and sensitivity so that you can see what
+                is actually happening. Many of my projects have studied the galaxies in the nearby Virgo cluster.
+            </p>
+        </section>
 
     </main>
 
