Restyled fonts.  Beginning to refactor layout for responsive desgin

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="../css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 
     <!-- Scripts -->
@@ -42,7 +43,7 @@
     <main role="main">
 
         <!-- About -->
-        <section id="about">
+        <section id="about" class="center-justify">
             <h2>About Jeffrey Kenney</h2>
             <p>
                 I am an observational astronomer who investigates the structure and evolution of galaxies. I am interested in the things
@@ -58,7 +59,9 @@
     <footer>
 
         <!-- Contact Info -->
-        <h3 id="contact"> Contact Information </h3>
+        <div class="center-justify">
+            <h3 id="contact" class="title-pad"> Contact Information </h3>
+        </div>
         <section class="grid-container">
             <div class="grid-item-txt">
                 <h4>
