--- a/pages/publications.html
+++ b/pages/publications.html
@@ -10,6 +10,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="../css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 
     <!-- Scripts -->
