small changes to styles.

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
 
     <header>
         <!-- Header Elements -->
-        <div class="head-container">
+        <div class="center-justify">
             <h1> Jeffrey Kenny </h1>
             <h2> Professor of Astronomy </h2>
             <h2> Yale University </h2>
