--- a/pages/projects.html
+++ b/pages/projects.html
@@ -30,7 +30,7 @@
 			<a href="projects.html"> Research </a>
 			<a href="publications.html"> Publications </a>
 			<a href=""> Teaching </a>
-			<a href="#contact"> Contact </a>
+			<a href="index.html#contact"> Contact </a>
 		</nav>
 
 
@@ -57,7 +57,7 @@
 		<!-- This is shown on page -->
 		<section>
 			<div class="center-justify">
-				<h2> Pillars of Dust and Young Stars from Ram Pressure Stripping of the Giant Spiral NGC 4921 in the Coma CLuster </h2>
+				<h2> Pillars of Dust and Young Stars from Ram Pressure Stripping of the Giant Spiral NGC 4921 in the Coma Cluster </h2>
 				<h3>
 					<em>NGC 4921</em>
 				</h3>
