--- a/pages/publications.html
+++ b/pages/publications.html
@@ -28,7 +28,7 @@
             <a href="projects.html"> Research </a>
             <a href="publications.html"> Publications </a>
             <a href=""> Teaching </a>
-            <a href="#contact"> Contact </a>
+            <a href="index.html#contact"> Contact </a>
         </nav>
 
     </header>
@@ -36,25 +36,30 @@
     <main role="main">
 
         <!-- Publications -->
-        <h1>Publications</h1>
-        <p> A full list of publications is avaliable from the following sources </p>
-        <div class="grid-container">
-            <div class="grid-item">
-                <a target="_blank" href="https://arxiv.org/search/?searchtype=author&query=Kenney%2C+J+D+P">
-                    <img height="200px" width="300px" src="../images/arxiv-logo.png">
-                </a>
-                <a target="_blank" href="https://arxiv.org/search/?searchtype=author&query=Kenney%2C+J+D+P" class="text-link">arXiv</a>
+        <section class="center-justify">
+            <h2>Publications</h2>
+            <p> A full list of publications is avaliable from the following sources </p>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <a target="_blank" href="https://arxiv.org/search/?searchtype=author&query=Kenney%2C+J+D+P">
+                        <img height="200px" width="300px" src="../images/arxiv-logo.png">
+                    </a>
+                    <a target="_blank" href="https://arxiv.org/search/?searchtype=author&query=Kenney%2C+J+D+P" class="text-link">arXiv</a>
+                </div>
+                <div>
+                    <a target="_blank" href="https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FKenney%2C%20J%2FKenney%2C%20J%20%20D%20%20P%22%20OR%20author_facet_hier%3A%221%2FKenney%2C%20J%2FKenney%2C%20Jeffrey%20D%20%20P%22)&p_=0&q=%20author%3A%22Jeffrey%20Kenney%22&sort=date%20desc%2C%20bibcode%20desc">
+                        <img height="200px" width="300px" src="../images/ads-logo.gif">
+                    </a>
+                    <a target="_blank" href="https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FKenney%2C%20J%2FKenney%2C%20J%20%20D%20%20P%22%20OR%20author_facet_hier%3A%221%2FKenney%2C%20J%2FKenney%2C%20Jeffrey%20D%20%20P%22)&p_=0&q=%20author%3A%22Jeffrey%20Kenney%22&sort=date%20desc%2C%20bibcode%20desc"
+                        class="text-link">NASA ADS</a>
+                </div>
             </div>
-            <div>
-                <a target="_blank" href="https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FKenney%2C%20J%2FKenney%2C%20J%20%20D%20%20P%22%20OR%20author_facet_hier%3A%221%2FKenney%2C%20J%2FKenney%2C%20Jeffrey%20D%20%20P%22)&p_=0&q=%20author%3A%22Jeffrey%20Kenney%22&sort=date%20desc%2C%20bibcode%20desc">
-                    <img height="200px" width="300px" src="../images/ads-logo.gif">
-                </a>
-                <a target="_blank" href="https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FKenney%2C%20J%2FKenney%2C%20J%20%20D%20%20P%22%20OR%20author_facet_hier%3A%221%2FKenney%2C%20J%2FKenney%2C%20Jeffrey%20D%20%20P%22)&p_=0&q=%20author%3A%22Jeffrey%20Kenney%22&sort=date%20desc%2C%20bibcode%20desc"
-                    class="text-link">NASA ADS</a>
-            </div>
-        </div>
+        </section>
 
         <!-- Selected publications -->
+        <section class="center-justify">
+            <h2> Selected Publications </h2>
+        </section>
 
     </main>
 
