--- a/pages/index.html
+++ b/pages/index.html
@@ -20,12 +20,15 @@
 
 <body>
 
-    <header>
+    <header class="center-justify">
         <!-- Header Elements -->
-        <div class="center-justify">
-            <h1> Jeffrey Kenny </h1>
-            <h2> Professor of Astronomy </h2>
-            <h2> Yale University </h2>
+        <div class="washout-back">
+            <div class="center-justify">
+                <h1> Jeffrey Kenny </h1>
+                <hr>
+                <h2> Professor of Astronomy </h2>
+                <h2> Yale University </h2>
+            </div>
         </div>
 
         <!-- Navigation -->
@@ -65,27 +68,33 @@
         <section class="grid-container">
             <div class="grid-item-txt">
                 <h4>
-                    <em> For Mail: </em>
+                    <em> Physical and Express Mail (e.g. FedEx, UPS) </em>
+                </h4>
+                <p>Jeff Kenney</p>
+                <p>Department of Astronomy</p>
+                <p>Steinbach Hall</p>
+                <p>Yale University</p>
+                <p>52 Hillhouse Avenue</p>
+                <p>New Haven, CT 06511, USA</p>
+            </div>
+            <div class="grid-item-txt">
+                <h4>
+                    <em> Mailing Address </em>
                 </h4>
                 <p>Jeff Kenney</p>
                 <p>Department of Astronomy</p>
                 <p>Yale University</p>
                 <p>PO BOX 208101</p>
-                <p>New Haven, CT 06520-8101</p>
+                <p>New Haven, CT 06520-8101, USA</p>
             </div>
             <div class="grid-item-txt">
                 <h4>
-                    <em> Phone, Fax, Office: </em>
-                </h4>
-                <p>(203)-432-3013 (Office)</p>
-                <p>(203-432-5048 (Fax)</p>
-                <p>(203)-432-3000 (Astronomy Deparment Office)</p>
-            </div>
-            <div class="grid-item-txt">
-                <h4>
-                    <em> Email: </em>
+                    <em> Email and Phone: </em>
                 </h4>
                 <p>jeff.kenney@yale.edu</p>
+                <p>(203)-432-3013 (Office)</p>
+                <p>(203)-432-3000 (Astronomy Deparment Office)</p>
+                <p>(203-432-5048 (Fax)</p>
             </div>
         </section>
 
