Changed page titles.  Edited homepage: moved nav outside header and centered washout box in middle of landing page picture.

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,7 @@
 
 <head>
 
+    <!-- Meta and title -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Homepage of Jeffrey Kenney</title>
@@ -20,18 +21,23 @@
 
 <body>
 
-    <header class="center-justify">
-        <!-- Header Elements -->
-        <div class="washout-back">
-            <div class="center-justify">
-                <h1> Jeffrey Kenny </h1>
-                <hr>
-                <h2> Professor of Astronomy </h2>
-                <h2> Yale University </h2>
+    <header>
+
+        <!-- Header -->
+        <div class="header-back">
+            <div class="washout-back">
+                <div class="center-justify">
+                    <h1> Jeffrey Kenny </h1>
+                    <hr>
+                    <h2> Professor of Astronomy </h2>
+                    <h2> Yale University </h2>
+                </div>
             </div>
         </div>
 
-        <!-- Navigation -->
+    </header>
+
+    <!-- Navigation -->
         <nav id="nav-bar">
             <a href="index.html"> Home </a>
             <a href="#about"> About </a>
@@ -40,8 +46,6 @@
             <a href=""> Teaching </a>
             <a href="#contact"> Contact </a>
         </nav>
-
-    </header>
 
     <main role="main">
 
@@ -68,7 +72,7 @@
         <section class="grid-container">
             <div class="grid-item-txt">
                 <h4>
-                    <em> Physical and Express Mail (e.g. FedEx, UPS) </em>
+                    <em> Physical and Express Mail </em>
                 </h4>
                 <p>Jeff Kenney</p>
                 <p>Department of Astronomy</p>
