--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,9 +4,10 @@
 
 <head>
 
+	<!-- Meta and title -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Homepage of Jeffrey Kenney</title>
+	<title>Research Projects of Jeffrey Kenney</title>
 
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="../css/normalize.css">
