Reformatted nav placement in projects and publications.

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -22,23 +22,27 @@
 <body>
 
     <header>
-        <!-- Navigation -->
-        <nav id="nav-bar">
-            <a href="index.html"> Home </a>
-            <a href="index.html#about"> About </a>
-            <a href="projects.html"> Research </a>
-            <a href="publications.html"> Publications </a>
-            <a href=""> Teaching </a>
-            <a href="index.html#contact"> Contact </a>
-        </nav>
+
+        <div class="center-justify">
+            <h1> Jeffrey Kenney Publications </h1>
+        </div>
 
     </header>
+
+     <!-- Navigation -->
+     <nav id="nav-bar">
+        <a href="index.html"> Home </a>
+        <a href="index.html#about"> About </a>
+        <a href="projects.html"> Research </a>
+        <a href="publications.html"> Publications </a>
+        <a href=""> Teaching </a>
+        <a href="index.html#contact"> Contact </a>
+    </nav>
 
     <main role="main">
 
         <!-- Publications -->
         <section class="center-justify">
-            <h2>Publications</h2>
             <p> A full list of publications is avaliable from the following sources </p>
             <div class="grid-container">
                 <div class="grid-item">
