--- a/pages/projects.html
+++ b/pages/projects.html
@@ -24,19 +24,21 @@
 
 	<header role="banner">
 
-		<!-- Navigation  -->
-		<nav id="nav-bar" class="borders-in">
-			<a href="index.html"> Home </a>
-			<a href="index.html#about"> About </a>
-			<a href="projects.html"> Research </a>
-			<a href="publications.html"> Publications </a>
-			<a href=""> Teaching </a>
-			<a href="index.html#contact"> Contact </a>
-		</nav>
-
+		<div class="center-justify">
+			<h1> Research of Jeffrey Kenney </h1>
+		</div>
 
 	</header>
 
+	<!-- Navigation  -->
+	<nav id="nav-bar" class="borders-in">
+		<a href="index.html"> Home </a>
+		<a href="index.html#about"> About </a>
+		<a href="projects.html"> Research </a>
+		<a href="publications.html"> Publications </a>
+		<a href=""> Teaching </a>
+		<a href="index.html#contact"> Contact </a>
+	</nav>
 
 	<main role="main">
 
