Reorganized css and refactored tags.

--- a/pages/index.html
+++ b/pages/index.html
@@ -26,7 +26,7 @@
         <!-- Header -->
         <div class="header-back">
             <div class="washout-back">
-                <div class="center-justify">
+                <div class="center">
                     <h1> Jeffrey Kenny </h1>
                     <hr>
                     <h2> Professor of Astronomy </h2>
@@ -66,11 +66,11 @@
     <footer>
 
         <!-- Contact Info -->
-        <div class="center-justify">
-            <h3 id="contact" class="title-pad"> Contact Information </h3>
+        <div class="center">
+            <h3 id="contact"> Contact Information </h3>
         </div>
         <section class="grid-container">
-            <div class="grid-item-txt">
+            <div class="grid-item-txt center">
                 <h4>
                     <em> Physical and Express Mail </em>
                 </h4>
@@ -81,7 +81,7 @@
                 <p>52 Hillhouse Avenue</p>
                 <p>New Haven, CT 06511, USA</p>
             </div>
-            <div class="grid-item-txt">
+            <div class="grid-item-txt center">
                 <h4>
                     <em> Mailing Address </em>
                 </h4>
@@ -91,7 +91,7 @@
                 <p>PO BOX 208101</p>
                 <p>New Haven, CT 06520-8101, USA</p>
             </div>
-            <div class="grid-item-txt">
+            <div class="grid-item-txt center">
                 <h4>
                     <em> Email and Phone: </em>
                 </h4>
