--- a/pages/projects.html
+++ b/pages/projects.html
@@ -24,7 +24,7 @@
 
 	<header role="banner">
 
-		<div class="center-justify">
+		<div class="center">
 			<h1> Research of Jeffrey Kenney </h1>
 		</div>
 
@@ -45,7 +45,7 @@
 		<!-- Project -->
 		<section class="content-wrap">
 			<!-- Narrow column for text and project description -->
-			<div class="center-justify">
+			<div class="center">
 				<h2> Gas Filaments from the Collision between the Giant Virgo Elliptical M86 and the Spiral Galaxy NGC 4438. </h2>
 				<h3> <em> Messier 86 and NGC 4438</em> </h3>
 				<p> Click on the image to reveal H&alpha; filaments. </p>
@@ -59,7 +59,7 @@
 
 		<!-- This is shown on page -->
 		<section>
-			<div class="center-justify">
+			<div class="center">
 				<h2> Pillars of Dust and Young Stars from Ram Pressure Stripping of the Giant Spiral NGC 4921 in the Coma Cluster </h2>
 				<h3>
 					<em>NGC 4921</em>
