--- a/pages/publications.html
+++ b/pages/publications.html
@@ -23,7 +23,7 @@
 
     <header>
 
-        <div class="center-justify">
+        <div class="center">
             <h1> Jeffrey Kenney Publications </h1>
         </div>
 
@@ -42,16 +42,16 @@
     <main role="main">
 
         <!-- Publications -->
-        <section class="center-justify">
+        <section class="center">
             <p> A full list of publications is avaliable from the following sources </p>
             <div class="grid-container">
-                <div class="grid-item">
+                <div class="grid-item-img">
                     <a target="_blank" href="https://arxiv.org/search/?searchtype=author&query=Kenney%2C+J+D+P">
                         <img height="200px" width="300px" src="../images/arxiv-logo.png">
                     </a>
                     <a target="_blank" href="https://arxiv.org/search/?searchtype=author&query=Kenney%2C+J+D+P" class="text-link">arXiv</a>
                 </div>
-                <div>
+                <div class="grid-item-img">
                     <a target="_blank" href="https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FKenney%2C%20J%2FKenney%2C%20J%20%20D%20%20P%22%20OR%20author_facet_hier%3A%221%2FKenney%2C%20J%2FKenney%2C%20Jeffrey%20D%20%20P%22)&p_=0&q=%20author%3A%22Jeffrey%20Kenney%22&sort=date%20desc%2C%20bibcode%20desc">
                         <img height="200px" width="300px" src="../images/ads-logo.gif">
                     </a>
@@ -62,7 +62,7 @@
         </section>
 
         <!-- Selected publications -->
-        <section class="center-justify">
+        <section class="center">
             <h2> Selected Publications </h2>
         </section>
 
