--- a/pages/index.html
+++ b/pages/index.html
@@ -27,7 +27,7 @@
         <div class="header-back">
             <div class="washout-back">
                 <div class="center">
-                    <h1> Jeffrey Kenny </h1>
+                    <h1> Jeffrey Kenney </h1>
                     <hr>
                     <h2> Professor of Astronomy </h2>
                     <h2> Yale University </h2>
@@ -38,14 +38,13 @@
     </header>
 
     <!-- Navigation -->
-        <nav id="nav-bar">
-            <a href="index.html"> Home </a>
-            <a href="#about"> About </a>
-            <a href="projects.html"> Research </a>
-            <a href="publications.html"> Publications </a>
-            <a href=""> Teaching </a>
-            <a href="#contact"> Contact </a>
-        </nav>
+    <nav id="nav-bar">
+        <a href="index.html"> Home </a>
+        <a href="projects.html"> Research </a>
+        <a href="publications.html"> Publications </a>
+        <a href=""> Teaching </a>
+        <a href="#contact"> Contact </a>
+    </nav>
 
     <main role="main">
 
@@ -53,11 +52,11 @@
         <section id="about" class="center-justify">
             <h2>About Jeffrey Kenney</h2>
             <p>
-                I am an observational astronomer who investigates the structure and evolution of galaxies. I am interested in the things
-                that promote and stop star formation so I study the interstellar medium, particularly molecular gas.
-                A major focus of my work has been the environmental effects on galaxies in clusters, especially ram pressure stripping.
-                I like nearby galaxies that can be studied with good resolution and sensitivity so that you can see what
-                is actually happening. Many of my projects have studied the galaxies in the nearby Virgo cluster.
+                As an observational astronomer who investigates the structure and evolution of galaxies, I am most interested in factors
+                that promote and stop star formation. A major focus of my work concerns the environmental impacts on galaxy
+                clusters, particularly molecular gas dynamics and ram pressure stripping. Much of my research has been conducted
+                on the nearby Virgo cluster, which can be studied with good resolution and sensitivity due to its close proximity
+                to our own Milky Way.
             </p>
         </section>
 
