--- a/pages/index.html
+++ b/pages/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 
     <!-- Scripts -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+	 crossorigin="anonymous"></script>
 
 </head>
 
@@ -42,7 +44,6 @@
         <a href="index.html"> Home </a>
         <a href="projects.html"> Research </a>
         <a href="publications.html"> Publications </a>
-        <a href=""> Teaching </a>
         <a href="#contact"> Contact </a>
     </nav>
 
@@ -58,6 +59,39 @@
                 on the nearby Virgo cluster, which can be studied with good resolution and sensitivity due to its close proximity
                 to our own Milky Way.
             </p>
+        </section>
+
+        <!-- Teaching -->
+        <section>
+            <h2 class="center">Teaching at Yale University</h2>
+            <!-- ASTR 120 -->
+            <h3>Astronomy 120: Galaxies and the Universe</h3>
+            <a target="_blank" href="http://www.astro.yale.edu/astro120">
+                <i title="astro120" aria-hidden="true" id="astro120" class="fas fa-external-link-alt" role="link"></i>
+                <span class="sr-only">Astro-120 hyperlink</span>
+            </a>
+            <p> An introduction to stars and stellar evolution, the structure and evolution of the Milky Way Galaxy and other
+                galaxies; quasars, active galactic nuclei, and supermassive black holes; cosmology and the expanding universe.
+                Intended for non-science majors. </p>
+            <!-- ASTR 310 -->
+            <h3>Astronomy 310: Galactic and Extragalactic Cosmology</h3>
+            <a target="_blank" href="http://www.astro.yale.edu/astro310">
+                <i title="astro310" aria-hidden="true" id="astro310" class="fas fa-external-link-alt" role="link"></i>
+                <span class="sr-only">Astro-310 hyperlink</span>
+            </a>
+            <p> The structure of the Milky Way galaxy and other galaxies; stellar populations and star clusters in galaxies;
+                gas and star formation in galaxies; the evolution of galaxies; galaxies and their large-scale environment;
+                galaxy mergers and interactions; supermassive black holes and active galactic nuclei. Intended for undergraduate
+                majors in Astronomy and Physics. </p>
+            <!-- ASTR 430/530 -->
+            <h3>Astronomy 430/530: Galaxies</h3>
+            <a target="_blank" href="http://www.astro.yale.edu/astro530">
+                <i title="astro530" aria-hidden="true" id="astro530" class="fas fa-external-link-alt" role="link"></i>
+                <span class="sr-only">Astro-530 hyperlink</span>
+            </a>
+            <p> A survey of the contents, morphology, structure, and kinematics of galaxies; star formation and the interstellar
+                medium in galaxies; stellar populations and chemical evolution; galaxy interactions and the environments
+                of galaxies, central black holes.  Intended for graduate and advanced undergraduate astronomy majors. </p>
         </section>
 
     </main>
