--- a/pages/projects.html
+++ b/pages/projects.html
@@ -116,22 +116,35 @@
 			<div class="grid-container">
 				<!-- Item in grid -->
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/ngc4522-HI+Roptical.gif" alt="NGC 4522 HI">
+					<img class="zoom" src="../images/ngc4522-HI+Roptical.gif" onclick="openModal(2);currentImg(1)" alt="NGC 4522 HI">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/n4522-kk99-ha+r-3panel.gif" alt="NGC 4522 H-alpha + R 3-panel">
+					<img class="zoom" src="../images/n4522-kk99-ha+r-3panel.gif" onclick="openModal(2);currentImg(2)" alt="NGC 4522 H-alpha + R 3-panel">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/n4522-hstimage-colombari-right-orientation.jpg" alt="NGC 4522 HST">
+					<img class="zoom" src="../images/n4522-hstimage-colombari-right-orientation.jpg" onclick="openModal(2);currentImg(3)" alt="NGC 4522 HST">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/n4522-hst-color-nolabel-bigger.jpg" alt="NGC 4522 HST color no labels">
+					<img class="zoom" src="../images/n4522-hst-color-nolabel-bigger.jpg" onclick="openModal(2);currentImg(4)" alt="NGC 4522 HST color no labels">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/4522-structures-labelled.jpg" alt="NGC 4522 structures labelled">
+					<img class="zoom" src="../images/4522-structures-labelled.jpg" onclick="openModal(2);currentImg(5)" alt="NGC 4522 structures labelled">
 				</div>
 			</div>
 			<!-- Modal popup -->
+			<div id="modal2">
+				<!-- Close button -->
+				<span class="close" onclick="closeModal(2)">&times;</span>
+				<!-- Modal left / right navigation -->
+				<span class="prev" onclick="changeImg(-1)">&#10094;</span>
+				<span class="next" onclick="changeImg(1)">&#10095;</span>
+				<!-- Modal Images -->
+				<img class="modal-content" src="../images/ngc4522-HI+Roptical.gif" alt="NGC 4522 HI">
+				<img class="modal-content" src="../images/n4522-kk99-ha+r-3panel.gif" alt="NGC 4522 H-alpha + R 3-panel">
+				<img class="modal-content" src="../images/n4522-hstimage-colombari-right-orientation.jpg" alt="NGC 4522 HST">
+				<img class="modal-content" src="../images/n4522-hst-color-nolabel-bigger.jpg" alt="NGC 4522 HST color no labels">
+				<img class="modal-content" src="../images/4522-structures-labelled.jpg" alt="NGC 4522 structures labelled">
+			</div>
 		</section>
 
 	</main>
