--- a/pages/projects.html
+++ b/pages/projects.html
@@ -65,22 +65,22 @@
 			<div class="grid-container">
 				<!-- Item in grid (an image in a container) -->
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/ngc4921_colombari_rotated.jpg" onclick="openModal(1);currentImg(1)" alt="NGC 4291 HST">
+					<img class="zoom" src="../images/ngc4921_colombari_rotated.jpg" onclick="openModal(1);currentImg(1, 1)" alt="NGC 4291 HST">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/ngc4921-color-hi-medium.jpg" onclick="openModal(1);currentImg(2)" alt="NGC 4291 HI labeled">
+					<img class="zoom" src="../images/ngc4921-color-hi-medium.jpg" onclick="openModal(1);currentImg(2, 1)" alt="NGC 4291 HI labeled">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/ngc4921-fig2.jpg" onclick="openModal(1);currentImg(3)" alt="NGC 4291 dust front">
+					<img class="zoom" src="../images/ngc4921-fig2.jpg" onclick="openModal(1);currentImg(3, 1)" alt="NGC 4291 dust front">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" onclick="openModal(1);currentImg(4)" alt="NGC 4291 zoom sections">
+					<img class="zoom" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" onclick="openModal(1);currentImg(4, 1)" alt="NGC 4291 zoom sections">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/ngc4921-fig3.jpg" onclick="openModal(1);currentImg(5)" alt="NGC 4291 dust front">
+					<img class="zoom" src="../images/ngc4921-fig3.jpg" onclick="openModal(1);currentImg(5, 1)" alt="NGC 4291 dust front">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/ngc4921-fig4.jpg" onclick="openModal(1);currentImg(6)" alt="NGC 4291 dust front">
+					<img class="zoom" src="../images/ngc4921-fig4.jpg" onclick="openModal(1);currentImg(6, 1)" alt="NGC 4291 dust front">
 				</div>
 			</div>
 			<!-- Popup (modal) image on click (hidden) -->
@@ -88,15 +88,15 @@
 				<!-- Close button -->
 				<span class="close" onclick="closeModal(1)">&times;</span>
 				<!-- Modal left / right navigation -->
-				<span class="prev" onclick="changeImg(-1)">&#10094;</span>
-				<span class="next" onclick="changeImg(1)">&#10095;</span>
+				<span class="prev" onclick="changeImg(-1, 1)">&#10094;</span>
+				<span class="next" onclick="changeImg(1, 1)">&#10095;</span>
 				<!-- Modal Images -->
-				<img class="modal-content" src="../images/ngc4921_colombari_rotated.jpg" alt="NGC 4291 HST">
-				<img class="modal-content" src="../images/ngc4921-color-hi-medium.jpg" alt="NGC 4291 HI labeled">
-				<img class="modal-content" src="../images/ngc4921-fig2.jpg" alt="NGC 4291 dust front">
-				<img class="modal-content" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" alt="NGC 4291 zoom sections">
-				<img class="modal-content" src="../images/ngc4921-fig3.jpg" alt="NGC 4291 dust front">
-				<img class="modal-content" src="../images/ngc4921-fig4.jpg" alt="NGC 4291 dust front">
+				<img class="modal-content-1" src="../images/ngc4921_colombari_rotated.jpg" alt="NGC 4291 HST">
+				<img class="modal-content-1" src="../images/ngc4921-color-hi-medium.jpg" alt="NGC 4291 HI labeled">
+				<img class="modal-content-1" src="../images/ngc4921-fig2.jpg" alt="NGC 4291 dust front">
+				<img class="modal-content-1" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" alt="NGC 4291 zoom sections">
+				<img class="modal-content-1" src="../images/ngc4921-fig3.jpg" alt="NGC 4291 dust front">
+				<img class="modal-content-1" src="../images/ngc4921-fig4.jpg" alt="NGC 4291 dust front">
 			</div>
 		</section>
 
@@ -116,19 +116,19 @@
 			<div class="grid-container">
 				<!-- Item in grid -->
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/ngc4522-HI+Roptical.gif" onclick="openModal(2);currentImg(1)" alt="NGC 4522 HI">
+					<img class="zoom" src="../images/ngc4522-HI+Roptical.gif" onclick="openModal(2);currentImg(1, 2)" alt="NGC 4522 HI">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/n4522-kk99-ha+r-3panel.gif" onclick="openModal(2);currentImg(2)" alt="NGC 4522 H-alpha + R 3-panel">
+					<img class="zoom" src="../images/n4522-kk99-ha+r-3panel.gif" onclick="openModal(2);currentImg(2, 2)" alt="NGC 4522 H-alpha + R 3-panel">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/n4522-hstimage-colombari-right-orientation.jpg" onclick="openModal(2);currentImg(3)" alt="NGC 4522 HST">
+					<img class="zoom" src="../images/n4522-hstimage-colombari-right-orientation.jpg" onclick="openModal(2);currentImg(3, 2)" alt="NGC 4522 HST">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/n4522-hst-color-nolabel-bigger.jpg" onclick="openModal(2);currentImg(4)" alt="NGC 4522 HST color no labels">
+					<img class="zoom" src="../images/n4522-hst-color-nolabel-bigger.jpg" onclick="openModal(2);currentImg(4, 2)" alt="NGC 4522 HST color no labels">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/4522-structures-labelled.jpg" onclick="openModal(2);currentImg(5)" alt="NGC 4522 structures labelled">
+					<img class="zoom" src="../images/4522-structures-labelled.jpg" onclick="openModal(2);currentImg(5, 2)" alt="NGC 4522 structures labelled">
 				</div>
 			</div>
 			<!-- Modal popup -->
@@ -136,14 +136,14 @@
 				<!-- Close button -->
 				<span class="close" onclick="closeModal(2)">&times;</span>
 				<!-- Modal left / right navigation -->
-				<span class="prev" onclick="changeImg(-1)">&#10094;</span>
-				<span class="next" onclick="changeImg(1)">&#10095;</span>
+				<span class="prev" onclick="changeImg(-1, 2)">&#10094;</span>
+				<span class="next" onclick="changeImg(1, 2)">&#10095;</span>
 				<!-- Modal Images -->
-				<img class="modal-content" src="../images/ngc4522-HI+Roptical.gif" alt="NGC 4522 HI">
-				<img class="modal-content" src="../images/n4522-kk99-ha+r-3panel.gif" alt="NGC 4522 H-alpha + R 3-panel">
-				<img class="modal-content" src="../images/n4522-hstimage-colombari-right-orientation.jpg" alt="NGC 4522 HST">
-				<img class="modal-content" src="../images/n4522-hst-color-nolabel-bigger.jpg" alt="NGC 4522 HST color no labels">
-				<img class="modal-content" src="../images/4522-structures-labelled.jpg" alt="NGC 4522 structures labelled">
+				<img class="modal-content-2" src="../images/ngc4522-HI+Roptical.gif" alt="NGC 4522 HI">
+				<img class="modal-content-2" src="../images/n4522-kk99-ha+r-3panel.gif" alt="NGC 4522 H-alpha + R 3-panel">
+				<img class="modal-content-2" src="../images/n4522-hstimage-colombari-right-orientation.jpg" alt="NGC 4522 HST">
+				<img class="modal-content-2" src="../images/n4522-hst-color-nolabel-bigger.jpg" alt="NGC 4522 HST color no labels">
+				<img class="modal-content-2" src="../images/4522-structures-labelled.jpg" alt="NGC 4522 structures labelled">
 			</div>
 		</section>
 
